--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "test-tesk6",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "keywords": [
     "react-app"
   ],
   "scripts": {
+    "start": "webpack -p --progress && node server.js",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server  --open --color ",
-    "build": "rimraf dist &&  webpack --progress --profile"
+    "dev": "webpack-dev-server  --open --color "
   },
   "author": "",
   "license": "ISC",
@@ -61,7 +61,7 @@
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.17.1",
+    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7"
   }
