--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-app"
   ],
   "scripts": {
-    "start": "webpack -p --progress && node server.js",
+    "start": "node server.js",
     "watch": "webpack --watch",
     "dev": "webpack-dev-server  --open --color "
   },
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "babel": "^6.23.0",
+    "express": "^4.16.3",
+    "path": "^0.12.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-loadable": "^5.5.0",
