--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "react-app"
   ],
   "scripts": {
-    "start": "node server.js",
+    "start": "webpack --progress & node server.js",
     "watch": "webpack --watch",
     "dev": "webpack-dev-server  --open --color "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.1.4",
     "babel": "^6.23.0",
     "express": "^4.16.3",
     "path": "^0.12.7",
+    "precss": "^3.1.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-loadable": "^5.5.0",
@@ -29,7 +31,7 @@
         {
           "targets": {
             "browsers": [
-              ">1%",
+              ">5%",
               "last 3 versions"
             ]
           }
@@ -60,6 +62,7 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
     "mini-css-extract-plugin": "^0.4.2",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
